Task 10 /get-involved/ fix take part section. • Alignment • Responsive images • Font sizing matching news stories on org pages.

--- a/app/assets/stylesheets/frontend/views/_get-involved.scss
+++ b/app/assets/stylesheets/frontend/views/_get-involved.scss
@@ -18,6 +18,10 @@
     }
   }
 
+  .featured-news article .content .text h3 {
+    padding-bottom: 3px;
+  }
+
   .content {
     padding: 0 $gutter-half;
   }
